--- a/public/.htaccess
+++ b/public/.htaccess
@@ -47,3 +47,8 @@ Options All -Indexes
 # Disable server signature start
 	ServerSignature Off
 # Disable server signature end
+
+
+#Header add Access-Control-Allow-Origin "*"
+#Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type,'Accept','Access-Control-Request-Method','Authorization',"
+#Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
