--- a/public/.htaccess
+++ b/public/.htaccess
@@ -48,7 +48,10 @@ Options All -Indexes
 	ServerSignature Off
 # Disable server signature end
 
+# ENABLE CORS
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
 
-#Header add Access-Control-Allow-Origin "*"
-#Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type,'Accept','Access-Control-Request-Method','Authorization',"
-#Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+Header add Access-Control-Allow-Origin "*"
+Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type,'Accept','Access-Control-Request-Method','Authorization',"
+Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
